# tilemaped

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.win64  README.md  SWindow.h  Settings.cpp  TCollision.cpp  TCollision.h  TDialogs.cpp  TDialogs.h  TEAction.cpp  TEAction.h  TEditor.cpp  TEditor.h  TOverlay.cpp  TOverlay.h  TSelection.cpp  TSelection.h  TSettings.h  TSprite.cpp  TSprite.h  TTFTexture.cpp  TTFTexture.h  TileMap.cpp  TileMap.h  config.dtd  configdtd.h  cx16_palette.h  imgui.ini  imgui_impl_sdl2.cpp  license.h  makeitso  tilemaped  tilemaped.cpp  tilemaped.exe.manifest  tilemaped.rc  updateversion.sh  version.h
example/: convertpal.sh  cx16_palette.gpl  makeroad.bat  makeroad.sh  makevera.sh  makevera4pp.bat  makevera4pp.sh  palformat.sh  palgen.cpp  palimport.cpp  vera.c  vera4bpp.c  veraroad.c
example/minim/: MINIM.PRG  atantab.h  colmap.h  irq.asm  makeimg.sh  makemini  minim.c  minim.h  mountimg  randtab.h  sintable.h  waypoints.h
example/minim/DAT/: BOOM  CARS  GAME  INTRO  PAL1  PAL2  PALI  SND1  SND2  TLST2  TRK1  TXINT  WAY1  WPAL2
example/minim/assets/gimp/carintro/: CARINTRO.BIN.bak  carintro.data  carintro.data.pal  carintro.gpl  carintro.xcf
example/minim/assets/gimp/tiles/: boom3x3.gpl  boom3x3.xcf  dunes.gpl  dunes.xcf  grass.gpl  grass.xcf  trees32.gpl  trees32.xcf  treetrunk.gpl  treetrunk.xcf
example/minim/assets/gimp/winner/: winner.xcf  winner128.gpl
example/minim/assets/sound/intro/: sling8b12k.raw
example/minim/assets/sound/winner/: prox8b12.raw
example/minim/assets/tilemaped/bgdunes/: settings.ini
example/minim/assets/tilemaped/boom/: settings.ini
example/minim/assets/tilemaped/text/: settings.ini
example/minim/assets/tilemaped/track1/: map1.bin.bak0  settings.ini
example/minim/assets/tilemaped/track2/: settings.ini
example/minim/tools/: atangen.cpp  coltable.cpp  gameaddr.cpp  makevfat.sh  randtab.cpp  sintable.c  waypoint.cpp  waypoints.h
example/minim/tools/sound/: clean.sh  convert.sh  makepcm.sh  splitpcm.sh  swab.sh
example/roadmap/: settings.ini
example/tmappot/: settings.ini
